[gd_scene load_steps=2 format=3 uid="uid://b7j5x2hs6fpg"]

[ext_resource type="Script" uid="uid://dt1yfbydamd83" path="res://scripts/home_menu.gd" id="1_6firx"]

[node name="HomeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6firx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -33.0
offset_right = 53.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="ExitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT GAME"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
